@@ -8,6 +8,8 @@ Changes for 0.6.2.1
 * Added proportions for the transitionplot
 * Managed thanks to Baptiste Auguié help on Stack Overflow I know now how to calculate the height of axisGrobs - useful both in the forestplot2 and the transitionPlot functions
 * Fixed the adjustment of the xlabel, the lineheight argument, the viewports for the forestplot2 function
+* Simplified the transitionPlot defaults
+* Fixed a gradient bug in bezierArrowGradient
 
 Changes for 0.6.2.0
 -------------------
